# haskellbook-solutions

./: Chapter06.hs  Chapter08.hs  Chapter6.hs  Chapter7.hs  Chapter8.hs  Chapter9.hs  LICENSE  README.md  UT.hs  haskellbook-solutions.cabal  mkChapter
src/: Chapter06.hs  Chapter07.hs  Chapter08.hs  Chapter09.hs  Chapter10.hs  Chapter11.hs  Chapter15.hs  Chapter16.hs  Chapter20.hs  Chapter22.hs  Cipher.hs  DaPhone.hs
test/: Spec.hs  TestCipher.hs
tests/: Spec.hs
