name:                haskellbook-solutions
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/vvv/haskellbook-solutions#readme
license:             BSD3
license-file:        LICENSE
author:              Valery V. Vorotyntsev
maintainer:          valery.vv@gmail.com
copyright:           Copyright (c) 2017 Valery V. Vorotyntsev
category:            Unclassified
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/vvv/haskellbook-solutions#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Chapter06
                     , Chapter07
                     , Chapter08
                     , Chapter09
                     , Chapter10
                     , Chapter11
                     , Chapter15
                     , Chapter16
                     , Chapter20
                     , Chapter22
                     , Cipher
                     , DaPhone
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , smallcheck
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

test-suite haskellbook-solutions-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskellbook-solutions
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , tasty-smallcheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -Wall -Werror
  default-language:    Haskell2010

test-suite haskellbook-solutions-doctest
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            doctest-driver.hs
  build-depends:      base, doctest, doctest-discover
  ghc-options:        -threaded
  default-language:   Haskell2010

executable haskellbook-solutions-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskellbook-solutions
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vvv/haskellbook-solutions
